# CactusDashboard

./: .cursorignore  .env.example  .env.testing  .github-config  .gitignore  @cactusdashboard.md  AUTH_SETUP.md  CACTUS_MEMORY.md  CLEANUP_SUMMARY.md  CONSOLIDACION_AUTH.md  CactusDashboard.md  DEADCODE-README.md  DEEP_CLEANUP_PLAN_PHASE2.md  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  DESARROLLO.md  DOCKER_SETUP.md  DOCUMENTATION.md  FUTURE_IMPROVEMENTS.md  MIGRATION_GUIDE.md  MONITORING-RUNBOOK.md  OAUTH_SETUP_PERMANENT.md  QUICK_REFERENCE.md  README 2.md  README-E2E.md  README.md  README_OPTIMIZED.md  RECOVERY_PLAN.md  TASK_REFERENCE.md  TASK_SYSTEM.md  Taskfile.yml  Taskfile.yml.backup.20250804_132745  Taskfile.yml.full  aws-deploy.sh  aws-manager.sh  cactus-key.pem  cactus.sh  deploy-aws-complete.sh  diagnose-oauth-detailed.sh  (+14 more)
cactus-wealth-backend/: .coverage  .coverage 2  .coverage 3  .cursorrules  .env.e2e.example  .env.example  .gitignore  Dockerfile  README.md  check_gio_user.py  create_all_tables.py  create_gio_user.py  create_simple_tables.py  create_tables.py  create_test_user.py  entrypoint.sh  fix_mvicente_user.py  init_system.py  main.py  manage_users.py  pyproject.toml  requirements.txt  reset_database.py  run_tests.py  test_smtp.py  update_gio_user.py
cactus-wealth-backend/alembic/: README  env.py
cactus-wealth-backend/alembic/versions/: 20250808_approve_manager_change_requests.py  20250808_merge_heads_manager_requests.py  3c9dd9582201_add_missing_user_columns.py  4b39e0ac02f2_add_god_role_to_userrole_enum.py  5c8d9e1f3a2b_add_google_oauth_fields_to_user.py  8fd147a36583_add_savings_capacity_to_clients.py  add_cactus_module_tables.py
cactus-wealth-backend/scripts/: create_admin_user.py  create_aum_seed.py  create_god_user.py  insert_demo_user.py
cactus-wealth-backend/src/cactus_wealth/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py  security.py  services.py  test_utils.py  worker.py
cactus-wealth-backend/src/cactus_wealth/api/endpoints/: cactus.py
cactus-wealth-backend/src/cactus_wealth/api/v1/: api.py  health_auth.py
cactus-wealth-backend/src/cactus_wealth/api/v1/endpoints/: __init__.py  assets.py  auth_native.py  automations.py  clients 2.py  clients.py  dashboard.py  health.py  hybrid_auth.py  insurance_policies.py  investment_accounts 2.py  investment_accounts.py  login.py  managers.py  (+10 more)
cactus-wealth-backend/src/cactus_wealth/core/: config.py  crypto.py  dataprovider.py  logging_config.py  middleware 2.py  middleware.py  tasks.py
cactus-wealth-backend/src/cactus_wealth/repositories/: __init__.py  activity_repository.py  asset_repository.py  base_repository.py  cactus_repository.py  client_repository.py  insurance_policy_repository.py  investment_account_repository 2.py  investment_account_repository.py  model_portfolio_repository.py  note_repository.py  portfolio_repository.py  report_repository.py  user_repository.py  webauthn_repository 2.py  webauthn_repository.py
cactus-wealth-backend/src/cactus_wealth/services/: __init__.py  aws_secrets_service.py  cactus_service.py  dashboard_service.py  insurance_policy_service.py  investment_account_service.py  portfolio_backtest_service.py  report_service.py  user_advisor_service.py  webauthn_service.py
cactus-wealth-backend/src/cactus_wealth/services/client/: __init__.py  insurance_policy_service.py  investment_account_service.py
cactus-wealth-backend/src/cactus_wealth/services/dashboard/: __init__.py  dashboard_service.py
cactus-wealth-backend/src/cactus_wealth/services/notification/: __init__.py  notification_service.py
cactus-wealth-backend/src/cactus_wealth/services/portfolio/: __init__.py  backtest_service.py  portfolio_service.py  report_service.py
cactus-wealth-backend/src/cactus_wealth/services/webhook/: __init__.py  webhook_service.py
cactus-wealth-backend/tests/: conftest.py  test_health_endpoint.py  test_manager_advisor.py  test_passkeys.py
cactus-wealth-backend/tests/api/v1/: __init__.py  test_crm_products_api.py  test_dashboard_api.py
cactus-wealth-backend/tests/api/v1/endpoints/: test_profile.py
cactus-wealth-backend/tests/health/: __init__.py  test_health_endpoint.py
cactus-wealth-backend/tests/integration/: test_api_endpoints.py
cactus-wealth-backend/tests/services/: __init__.py  test_portfolio_service.py  test_report_service.py
cactus-wealth-backend/tests/test_repositories/: test_client_repository.py  test_portfolio_repository.py
cactus-wealth-backend/tests/webhooks/: __init__.py  test_client_webhooks.py
(+253 files in other folders)
